tests/modules/trecincb.nim
discard """
  line: 7
  errormsg: "recursive dependency: "
"""
# Test recursive includes

include trecincb

echo "trecinb"
